--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
 # include $(FSTAR_HOME)/ulib/ml/Makefile.include
 
 all:
-	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main main.fst && ./a.out
+	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main main.fst callMain.c && ./a.out
