--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,7 @@
 # include $(FSTAR_HOME)/ulib/ml/Makefile.include
 
 all:
-	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main main.fst callMain.c fstarHelper.c && ./a.out
+	krml  -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
+
+debug:
+	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats  main.fst callMain.c fstarHelper.c && ./a.out
