--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,10 @@
 # include $(FSTAR_HOME)/ulib/ml/Makefile.include
 
 all:
-	krml  -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
+	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
+
+exec:
+	krml  -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
 
 debug:
 	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats  main.fst callMain.c fstarHelper.c && ./a.out
