add original test library and test code

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,4 +7,6 @@ exec:
 	krml  -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
 
 debug:
-	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats  main.fst callMain.c fstarHelper.c && ./a.out
+	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
+test:
+	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Test -fsopt --query_stats test.fst testing.c && ./a.out
