some change file-tree

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,3 @@
-# include $(FSTAR_HOME)/ulib/ml/Makefile.include
-
 all:
 	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
 
@@ -9,4 +7,4 @@ exec:
 debug:
 	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
 test:
-	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Test -fsopt --query_stats test.fst testing.c && ./a.out
+	krml -add-include '"Testing.h"' -verify -drop WasmSupport -tmpdir ./out -no-prefix Test -fsopt --query_stats test.fst testing.c && ./a.out
