add valid packet parse test

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,5 +6,9 @@ exec:
 
 debug:
 	krml -verify -drop WasmSupport -tmpdir ./out -no-prefix Main -fsopt --query_stats main.fst callMain.c fstarHelper.c && ./a.out
+
 test:
-	krml -add-include '"Testing.h"' -verify -drop WasmSupport -tmpdir ./out -no-prefix Test -fsopt --query_stats test.fst testing.c && ./a.out
+	krml -add-include '"Testing.h"' -verify -drop WasmSupport -tmpdir ./out -no-prefix Test -fsopt --query_stats test.fst testing.c fstarHelper.c && ./a.out
+
+exec_test:
+	krml -add-include '"Testing.h"' -drop WasmSupport -tmpdir ./out -no-prefix Test -fsopt --query_stats test.fst testing.c fstarHelper.c && ./a.out
