--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 all:
-	make test_exec && sleep 3 && krml -verify -warn-error +9 -drop WasmSupport -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix Main -o ./out/main.out main.fst callMain.c fstarHelper.c && ./out/main.out
+	make test && sleep 3 && krml -verify -warn-error +9 -drop WasmSupport -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix Main -o ./out/main.out main.fst callMain.c fstarHelper.c && ./out/main.out
 
 verify:
 	krml -verify -warn-error +9 -drop WasmSupport -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix Main -o ./out/main.out main.fst callMain.c fstarHelper.c && ./out/main.out
@@ -35,7 +35,7 @@ test_error_handle:
 test_error_handle_exec:
 	krml -warn-error +9 -add-include '"Testing.h"' -drop WasmSupport -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix TestErrorHandle -o ./out/testErrorHandle.out testErrorHandle.fst testing.c fstarHelper.c && ./out/testErrorHandle.out
 
-test_exec:
+test:
 	make test_valid_packets_exec && \
 	make test_slice_byte_exec && \
 	make test_decoding_packets_exec && \
