qos, dup, retain refacta and add qos testcode

--- a/src/Makefile
+++ b/src/Makefile
@@ -36,10 +36,10 @@ test_error_handle_exec:
 	krml -warn-error +9 -add-include '"Testing.h"' -drop WasmSupport -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix TestErrorHandle -o ./out/testErrorHandle.out testErrorHandle.fst testing.c fstarHelper.c && ./out/testErrorHandle.out
 
 test:
-	make test_valid_packets_exec && \
-	make test_slice_byte_exec && \
-	make test_decoding_packets_exec && \
-	make test_error_handle_exec && \
+	make test_valid_packets_exec > /dev/null 2>&1 && \
+	make test_slice_byte_exec > /dev/null 2>&1 && \
+	make test_decoding_packets_exec > /dev/null 2>&1 && \
+	make test_error_handle_exec > /dev/null 2>&1 && \
 	./out/testValidPackets.out && \
 	./out/testSliceByte.out && \
 	./out/testDecodingPackets.out && \
