can call fstar-mqtt-packet-parser from rust-mqtt-impl

--- a/src/mqtt-packet-parser/Makefile
+++ b/src/mqtt-packet-parser/Makefile
@@ -22,6 +22,9 @@ verify:
 exec:
 	time (krml -drop WasmSupport -drop C_Endianness -drop C -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix Main -o ./out/mqttPacketParser.out main.fst callMain.c utils.c && ./out/mqttPacketParser.out packet_example.bin)
 
+compile:
+	time (krml -drop WasmSupport -drop C_Endianness -drop C -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix Main -o ./out/mqttPacketParser.out main.fst callMain.c utils.c)
+
 exec_silent:
 	time (krml -drop WasmSupport -drop C_Endianness -drop C -tmpdir ./out -fsopt --cache_dir -fsopt ./out -no-prefix Main -o ./out/mqttPacketParser.out main.fst callMain.c utils.c > /dev/null 2>&1 && ./out/mqttPacketParser.out packet_example.bin)
 
