--- a/src/mqtt-packet-parser/src/test/gen_test/test_c.template
+++ b/src/mqtt-packet-parser/src/test/gen_test/test_c.template
@@ -11,14 +11,15 @@ static unsigned int total = 0;
 static unsigned int pass = 0;
 
 void Testing_test_start(C_String_t title) {{
-  printf("  \\x1b[36m[%s]\\x1b[0m\\n", title);
+  printf("  \x1b[36m[%s]\x1b[0m\n", title);
 }}
 
 void Testing_test_end() {{
   if (total != pass) {{
-    printf("  \\x1b[35mSOME TESTS FAILED (%u/%u) (PASS/TOTAL)\\x1b[0m\\n", pass, total);
+    printf("  \x1b[35mSOME TESTS FAILED (%u/%u) (PASS/TOTAL)\x1b[0m\n", pass, total);
+    exit(1);
   }} else {{
-    puts("  \\x1b[32mALL TESTS PASSED\\x1b[0m\\n");
+    puts("  \x1b[32mALL TESTS PASSED\x1b[0m\n");
   }}
 }}
 
@@ -34,28 +35,28 @@ void test_static(bool is_pass) {{
   }}
 }}
 
-#define MK_CHECK(n)\\
-  void Testing_eq_i##n(C_String_t title, int##n##_t expect, int##n##_t result) {{\\
-    bool is_pass = (expect == result);\\
-    test_static(is_pass);\\
-    if (is_pass) {{\\
-    }} else {{\\
-          printf("\\x1b[31m✘\\x1b[0m %s\\n\\t expected is %" PRId##n " but result is %" PRId##n "\\n", title, expect, result);\\
-    }}\\
+#define MK_CHECK(n)\
+  void Testing_eq_i##n(C_String_t title, int##n##_t expect, int##n##_t result) {{\
+    bool is_pass = (expect == result);\
+    test_static(is_pass);\
+    if (is_pass) {{\
+    }} else {{\
+          printf("\x1b[31m✘\x1b[0m %s\n\t expected is %" PRId##n " but result is %" PRId##n "\n", title, expect, result);\
+    }}\
   }}
 MK_CHECK(8)
 MK_CHECK(16)
 MK_CHECK(32)
 MK_CHECK(64)
 
-#define MK_UCHECK(n)\\
-  void Testing_eq_u##n(C_String_t title, uint##n##_t expect, uint##n##_t result) {{\\
-    bool is_pass = (expect == result);\\
-    test_static(is_pass);\\
-    if (is_pass) {{\\
-    }} else {{\\
-          printf("\\x1b[31m✘\\x1b[0m %s\\n\\t expected is %" PRIu##n " but result is %" PRIu##n "\\n", title, expect, result);\\
-    }}\\
+#define MK_UCHECK(n)\
+  void Testing_eq_u##n(C_String_t title, uint##n##_t expect, uint##n##_t result) {{\
+    bool is_pass = (expect == result);\
+    test_static(is_pass);\
+    if (is_pass) {{\
+    }} else {{\
+          printf("\x1b[31m✘\x1b[0m %s\n\t expected is %" PRIu##n " but result is %" PRIu##n "\n", title, expect, result);\
+    }}\
   }}
 MK_UCHECK(8)
 MK_UCHECK(16)
@@ -67,7 +68,7 @@ void Testing_eq_bool(C_String_t title, bool expect, bool result) {{
   test_static(is_pass);
   if (is_pass) {{
   }} else {{
-    printf("\\x1b[31m✘\\x1b[0m %s\\n\\t expected is true but result is false\\n", title);
+    printf("\x1b[31m✘\x1b[0m %s\n\t expected is true but result is false\n", title);
   }}
 }}
 
@@ -76,14 +77,14 @@ void Testing_eq_str(C_String_t title, C_String_t expect, C_String_t result) {{
   test_static(is_pass);
   if (is_pass) {{
   }} else {{
-    printf("\\x1b[31m✘\\x1b[0m %s\\n\\t expected is \\'%s\\' but result is \\'%s\\'\\n", title, expect, result);
+    printf("\x1b[31m✘\x1b[0m %s\n\t expected is \'%s\' but result is \'%s\'\n", title, expect, result);
   }}
 }}
 
 void Testing_eq_u8_array(C_String_t title, C_String_t expect, uint32_t expect_length, C_String_t result) {{
   for(uint32_t i = 0; i <= expect_length; i++) {{
       if(expect[i] != result[i]) {{
-          printf("\\x1b[31m✘\\x1b[0m %s\\n\\t expected is \\'%s\\' but result is '", title, expect);
+          printf("\x1b[31m✘\x1b[0m %s\n\t expected is \'%s\' but result is '", title, expect);
           for(uint32_t i = 0; i <= expect_length; i++) {{
             printf("%c",result[i] & 0x000000FF);
           }}
@@ -133,7 +134,7 @@ int main(int argc, char *argv[]) {{
     fp = fopen(file_name, "rb");
 
     if (fp == NULL) {{
-        fprintf(stderr, "%s open error.\\n", file_name);
+        fprintf(stderr, "%s open error.\n", file_name);
         exit(EXIT_FAILURE);
     }}
 
@@ -141,13 +142,13 @@ int main(int argc, char *argv[]) {{
 
     request = (uint8_t*)malloc(sizeof(uint8_t) * (packet_size));
     if(request == NULL) {{
-        fprintf(stderr, "malloc error.\\n");
+        fprintf(stderr, "malloc error.\n");
         exit(EXIT_FAILURE);
     }}
 
     size_t read_count = fread(request, sizeof(uint8_t), packet_size, fp);
     if (fclose(fp) == EOF) {{
-        fprintf(stderr, "fclose error.\\n");
+        fprintf(stderr, "fclose error.\n");
         exit(EXIT_FAILURE);
     }}
 
